<resources>
    <string name="app_name">儿童视频</string>
    
    <!-- Bottom Navigation -->
    <string name="nav_home">学习</string>
    <string name="nav_recommend">娱乐</string>
    <string name="nav_profile">我</string>
    
    <!-- Top Navigation -->
    <string name="tab_discover">发现</string>
    <string name="tab_follow">关注</string>
    <string name="search">搜索</string>
    
    <!-- Profile Screen -->
    <string name="default_username">小宝贝</string>
    <string name="account_id_label">账号ID: </string>
    <string name="default_account_id">12345678</string>
    <string name="ip_location_label">IP归属地: </string>
    <string name="default_ip_location">北京</string>
    <string name="bio_label">个人简介:</string>
    <string name="default_bio">这个人很懒，还没有简介</string>
    <string name="edit_profile">编辑资料</string>
    <string name="set_background">设置背景</string>
    <string name="viewing_history">观看历史记录</string>
    <string name="my_likes">我的喜欢</string>
    <string name="view_all">查看全部</string>
    <string name="content_area">儿童视频内容区域</string>
    <string name="no_history">暂无观看记录</string>
    <string name="no_likes">暂无喜欢的内容</string>
    <string name="back">返回</string>
    
    <!-- Settings Menu -->
    <string name="settings">设置</string>
    <string name="parent_settings">家长设置</string>
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="register">注册</string>
    <string name="login_register">登录/注册</string>
    
    <!-- Toast Messages -->
    <string name="feature_in_development">功能正在开发中</string>
</resources>